--- a/webapp/src/app/modals/new-course/new-course-dialog.component.html
+++ b/webapp/src/app/modals/new-course/new-course-dialog.component.html
@@ -24,7 +24,7 @@
       <mat-error>Please provide a valid Name</mat-error>
     </mat-form-field>
 
-    <label>Team Min Size:</label><br />
+    <label>Team Min Size:</label>
     <mat-slider
       formControlName="teamMinSize"
       [thumbLabel]="true"
