add confirmation dialog
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -55,7 +55,7 @@
     *ngIf="
       course && this.currentUser.roles.includes('ROLE_PROFESSOR')
     "
-    [routerLink]="routerUrl"
+    [routerLink]=""
     [queryParams]="{ editCourse: true }"
   >
     <mat-icon>settings</mat-icon>
