--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -17,7 +17,7 @@
                     </ul>
                 </mat-card-content>
                 <mat-card-actions align="end">
-                    <button mat-raised-button *ngIf="vm.active" color="primary" (click)="connectToVm(vm.id)">CONNECT</button>
+                    <button mat-raised-button *ngIf="vm.active" color="primary" (click)="connectToVm(vm)">CONNECT</button>
                     <button mat-icon-button (click)="openDialog(vm.id)">
                         <mat-icon>more_vert</mat-icon>
                     </button>
