--- a/webapp/src/app/professor/students/tab-students.component.html
+++ b/webapp/src/app/professor/students/tab-students.component.html
@@ -1,81 +1,104 @@
 <div class="container">
-    <h2>Enrolled students</h2>
+  <h2>Enrolled students</h2>
 
-    <!-- Add student input field with autocomplete -->
-    <div class="container">
-        <mat-form-field>
-            <mat-label>Add Student</mat-label>
-            <input matInput type="search"
-                   placeholder="Add Student"
-                   aria-label="Number"
-                   matInput
-                   value=""
-                   [formControl]="addStudentControl"
-                   [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                <mat-option *ngFor="let option of filteredStudents | async" [value]="option">
-                    {{displayFn(option)}}
-                </mat-option>
-            </mat-autocomplete>
-        </mat-form-field>
-        <button mat-button (click)="addStudent()">Add</button>
-    </div>
+  <!-- Add student input field with autocomplete -->
+  <div class="container">
+    <mat-form-field>
+      <mat-label>Add Student</mat-label>
+      <input
+        matInput
+        type="search"
+        placeholder="Add Student"
+        aria-label="Number"
+        matInput
+        value=""
+        [formControl]="addStudentControl"
+        [matAutocomplete]="auto"
+      />
+      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+        <mat-option
+          *ngFor="let option of filteredStudents | async"
+          [value]="option"
+        >
+          {{ displayFn(option) }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <button mat-button (click)="addStudent()">Add</button>
+  </div>
 
-    <!-- Delete student button -->
-    <button mat-button (click)="deleteSelected()">Delete Selected</button>
+  <mat-form-field>
+    <ngx-mat-file-input
+      placeholder="Add more students with .csv file"
+      accept=".csv"
+      [formControl]="csvControl"
+    ></ngx-mat-file-input>
+    <mat-icon matSuffix>folder</mat-icon>
+  </mat-form-field>
+  <button mat-button (click)="enrollMany()">Add</button><br />
 
-    <!-- Students in course table -->
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+  <!-- Delete student button -->
+  <button mat-button (click)="deleteSelected()">Delete Selected</button>
 
-        <!-- Checkbox Column description-->
-        <ng-container matColumnDef="select">
-            <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox (change)="$event ? masterToggle() : null"
-                              [checked]="selection.hasValue() && isAllSelected()"
-                              [indeterminate]="selection.hasValue() && !isAllSelected()"
-                              [aria-label]="checkboxLabel()">
-                </mat-checkbox>
-            </th>
-            <td mat-cell *matCellDef="let row">
-                <mat-checkbox (click)="$event.stopPropagation()"
-                              (change)="$event ? selection.toggle(row) : null"
-                              [checked]="selection.isSelected(row)"
-                              [aria-label]="checkboxLabel(row)">
-                </mat-checkbox>
-            </td>
-        </ng-container>
+  <!-- Students in course table -->
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <!-- Checkbox Column description-->
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox
+          (change)="$event ? masterToggle() : null"
+          [checked]="selection.hasValue() && isAllSelected()"
+          [indeterminate]="selection.hasValue() && !isAllSelected()"
+          [aria-label]="checkboxLabel()"
+        >
+        </mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox
+          (click)="$event.stopPropagation()"
+          (change)="$event ? selection.toggle(row) : null"
+          [checked]="selection.isSelected(row)"
+          [aria-label]="checkboxLabel(row)"
+        >
+        </mat-checkbox>
+      </td>
+    </ng-container>
 
-        <!-- Student Serial Column -->
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
+    <!-- Student Serial Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    </ng-container>
 
-        <!-- Student Surname Column -->
-        <ng-container matColumnDef="surname">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Surname</th>
-            <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
-        </ng-container>
+    <!-- Student Surname Column -->
+    <ng-container matColumnDef="surname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+      <td mat-cell *matCellDef="let element">{{ element.surname }}</td>
+    </ng-container>
 
-        <!-- Student Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
+    <!-- Student Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
 
-        <!-- Student Teams Column (next Lab will be completed) -->
-        <ng-container matColumnDef="team">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Team</th>
-            <td mat-cell *matCellDef="let element"> {{element.team ? element.team.name : ''}} </td>
-        </ng-container>
+    <!-- Student Teams Column (next Lab will be completed) -->
+    <ng-container matColumnDef="team">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Team</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.team ? element.team.name : '' }}
+      </td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
-    </table>
+    <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
+    <tr mat-row *matRowDef="let row; columns: colsToDisplay"></tr>
+  </table>
 
-    <!-- Table data paginator -->
-    <mat-paginator
-            [pageSize]="5"
-            [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons>
-    </mat-paginator>
+  <!-- Table data paginator -->
+  <mat-paginator
+    [pageSize]="5"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    showFirstLastButtons
+  >
+  </mat-paginator>
 </div>
