--- a/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
+++ b/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
@@ -37,7 +37,7 @@
     </mat-button-toggle-group>
     <h3>Professors:</h3>
     <mat-list style="margin-top: -20px">
-      <mat-list-item *ngFor="let professor of professors">
+      <mat-list-item *ngFor="let professor of professors | async">
         {{ displayFn(professor) }}
         <button
           mat-button
@@ -56,7 +56,6 @@
         type="search"
         placeholder="Add Professor"
         aria-label="Number"
-        matInput
         value=""
         [formControl]="addProfessorControl"
         [matAutocomplete]="auto"
@@ -74,10 +73,10 @@
   </form>
 </div>
 
-<div mat-dialog-actions align="end">
+<div mat-dialog-actions style="justify-content: center">
+  <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
   <button mat-button color="accent" (click)="deleteCourse()">
     Delete Course
   </button>
-  <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
   <button mat-button color="primary" (click)="editCourse()">Edit</button>
 </div>
