--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -7,13 +7,12 @@
             [queryParams]="{ addAssignment: true }">New Assignment</button>
 
     <!-- Assignments in course table -->
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-
-        <!-- Assignment Serial Column -->
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
+    <table mat-table [dataSource]="dataSource"
+           multiTemplateDataRows
+           class="mat-elevation-z8"
+           matSort
+           matSortActive="dueDate"
+           matSortDirection="asc">
 
         <!-- Assignment NAME Column -->
         <ng-container matColumnDef="name">
@@ -29,7 +28,7 @@
 
         <!-- Assignment DUE_DATE Column -->
         <ng-container matColumnDef="dueDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Date</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="dueDate">Due Date</th>
             <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
         </ng-container>
 
@@ -44,8 +43,62 @@
             </td>
         </ng-container>
 
+        <ng-container matColumnDef="solutions">
+            <th mat-header-cell *matHeaderCellDef>Solutions</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button
+                        (click)="showSolutions(element)">
+                    <span *ngIf="expandedElement === element; else expandLess" class="material-icons">expand_less</span>
+                    <ng-template #expandLess>
+                        <span class="material-icons">expand_more</span>
+                    </ng-template>
+                </button>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="colsToDisplay.length">
+                <div class="example-element-detail"
+                     [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                    <table mat-table [dataSource]="innerDataSource"
+                           class="mat-elevation-z8"
+                           matSort>
+                        <ng-container matColumnDef="studentName">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Student Name</th>
+                            <td mat-cell *matCellDef="let element"> {{element.studentName}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="studentSurname">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Student Surname</th>
+                            <td mat-cell *matCellDef="let element"> {{element.studentSurname}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="studentId">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Student ID</th>
+                            <td mat-cell *matCellDef="let element"> {{element.studentId}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="status">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="statusTs">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status TS</th>
+                            <td mat-cell *matCellDef="let element"> {{dateString(element.statusTs)}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="grade">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Grade</th>
+                            <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
+                        </ng-container>
+                        <tr mat-header-row *matHeaderRowDef="innerColsToDisplay"></tr>
+                        <tr mat-row *matRowDef="let row; columns: innerColsToDisplay;"></tr>
+                    </table>
+                </div>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
+        <tr mat-row *matRowDef="let row; columns: colsToDisplay;"
+            class="example-element-row"
+            [class.example-expanded-row]="expandedElement === row"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
 
     <!-- Table data paginator -->
