--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -2,9 +2,18 @@
 
     <h2>Published Assignments</h2>
 
-    <button mat-raised-button color="primary" class="new-ass"
-            [routerLink]=""
-            [queryParams]="{ addAssignment: true }">New Assignment</button>
+    <div>
+        <button mat-raised-button color="primary" class="new-ass"
+                [routerLink]=""
+                [queryParams]="{ addAssignment: true }">New Assignment</button>
+    </div>
+
+    Filter Solutions by Status:
+    <div *ngFor="let status of assignmentStatuses" style="display: inline-block; margin: 20px">
+        <button mat-flat-button
+                [color]="this.filteredStatuses.includes(status) ? '' : 'accent'"
+                (click)="changeFiltering(status)">{{status}}</button>
+    </div>
 
     <!-- Assignments in course table -->
     <table mat-table [dataSource]="dataSource"
@@ -88,7 +97,8 @@
                             <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="innerColsToDisplay"></tr>
-                        <tr mat-row *matRowDef="let row; columns: innerColsToDisplay;"></tr>
+                        <tr mat-row *matRowDef="let row; columns: innerColsToDisplay;"
+                                    [hidden]="this.filteredStatuses.includes(row.status)"></tr>
                     </table>
                 </div>
             </td>
