--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -96,6 +96,14 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header>Grade</th>
                             <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
                         </ng-container>
+                        <ng-container matColumnDef="uploads">
+                            <th mat-header-cell *matHeaderCellDef>Uploads</th>
+                            <td mat-cell *matCellDef="let element">
+                                <button mat-raised-button
+                                        [routerLink]=""
+                                        [queryParams]="{ solution: element.id }">Uploads</button>
+                            </td>
+                        </ng-container>
                         <tr mat-header-row *matHeaderRowDef="innerColsToDisplay"></tr>
                         <tr mat-row *matRowDef="let row; columns: innerColsToDisplay;"
                                     [hidden]="this.filteredStatuses.includes(row.status)"></tr>
