date to timestamp refactoring
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -32,13 +32,13 @@
         <!-- Assignment RELEASE_DATE Column -->
         <ng-container matColumnDef="releaseDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Release Date</th>
-            <td mat-cell *matCellDef="let element"> {{element.releaseDate}} </td>
+            <td mat-cell *matCellDef="let element"> {{dateString(element.releaseDate)}} </td>
         </ng-container>
 
         <!-- Assignment DUE_DATE Column -->
         <ng-container matColumnDef="dueDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header="dueDate">Due Date</th>
-            <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
+            <td mat-cell *matCellDef="let element"> {{dateString(element.dueDate)}} </td>
         </ng-container>
 
         <ng-container matColumnDef="document">
