Add VMs list by team in prof VMs tab, add edit_team_vm_options modal

--- a/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
+++ b/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
@@ -39,7 +39,7 @@
       <ngx-mat-file-input
         formControlName="vmModel"
         placeholder="VM Model"
-        accept=".txt, .yaml, .yml"
+        accept=".txt, .yaml, .yml, .jpg, .png, .jpeg"
         required
       ></ngx-mat-file-input>
       <mat-icon matSuffix>folder</mat-icon>
