--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -1,28 +1,38 @@
 <div class="container">
-    <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
-        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
-            <mat-card class="mat-elevation-z4" [ngClass]="vm.active ? 'active' : 'inactive'">
-                <mat-card-content>
-                    VM "{{vm.id}} - {{vm.name}}" configuration:
-                    <ul>
-                        <li>
-                            <span class="badge">vCPU:</span> {{vm.vcpu}} in use
-                        </li>
-                        <li>
-                            <span class="badge">RAM:</span> {{vm.ram}}GB
-                        </li>
-                        <li>
-                            <span class="badge">Disk:</span> {{vm.diskStorage}}GB
-                        </li>
-                    </ul>
-                </mat-card-content>
-                <mat-card-actions align="end">
-                    <button mat-raised-button *ngIf="vm.active" color="primary" (click)="connectToVm(vm)">CONNECT</button>
-                    <button mat-icon-button (click)="openDialog(vm.id)">
-                        <mat-icon>more_vert</mat-icon>
-                    </button>
-                </mat-card-actions>
-            </mat-card>
+    <div *ngFor="let dataSource of dataSources; let i = index">
+        <div class="section-title">
+            <h2>VMs for team: {{dataSource.data[0].team.name}}</h2>
+            <button mat-raised-button class="centered-button" color="primary" (click)="openDialogTeamOption(dataSource.data[0].team, i)">
+                Change Team Settings
+            </button>
         </div>
+
+        <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
+            <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
+                <mat-card class="mat-elevation-z4" [ngClass]="vm.active ? 'active' : 'inactive'">
+                    <mat-card-content>
+                        VM "{{vm.id}} - {{vm.name}}" configuration:
+                        <ul>
+                            <li>
+                                <span class="badge">vCPU:</span> {{vm.vcpu}} in use
+                            </li>
+                            <li>
+                                <span class="badge">RAM:</span> {{vm.ram}}GB
+                            </li>
+                            <li>
+                                <span class="badge">Disk:</span> {{vm.diskStorage}}GB
+                            </li>
+                        </ul>
+                    </mat-card-content>
+                    <mat-card-actions align="end">
+                        <button mat-raised-button *ngIf="vm.active" color="primary" (click)="connectToVm(vm)">CONNECT</button>
+                        <button mat-icon-button (click)="openDialogVmOption(vm.id, i)">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                    </mat-card-actions>
+                </mat-card>
+            </div>
+        </div>
+        <mat-divider></mat-divider>
     </div>
 </div>
