refactor server-side upload mgmt
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -19,9 +19,7 @@
     <table mat-table [dataSource]="dataSource"
            multiTemplateDataRows
            class="mat-elevation-z8"
-           matSort
-           matSortActive="dueDate"
-           matSortDirection="asc">
+           matSort>
 
         <!-- Assignment NAME Column -->
         <ng-container matColumnDef="name">
