Started management of proposals + some changes in server

--- a/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
+++ b/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
@@ -62,7 +62,7 @@
       <input
         matInput
         type="search"
-        placeholder="Add Professor"
+        placeholder="Add Professor (search by surname)"
         aria-label="Number"
         value=""
         [formControl]="addProfessorControl"
