--- a/webapp/src/app/professor/students/tab-students.component.html
+++ b/webapp/src/app/professor/students/tab-students.component.html
@@ -8,7 +8,7 @@
       <input
         matInput
         type="search"
-        placeholder="Add Student"
+        placeholder="Add Student (search by surname)"
         aria-label="Number"
         matInput
         value=""
