--- a/webapp/src/app/student/team/tab-no-team.component.html
+++ b/webapp/src/app/student/team/tab-no-team.component.html
@@ -7,7 +7,7 @@
       <input
         matInput
         type="search"
-        placeholder="Add Student"
+        placeholder="Add Student (search by surname)"
         aria-label="Number"
         matInput
         value=""
@@ -32,7 +32,9 @@
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row">
-          <button mat-button (click)="addWishMember(row)">Pick</button>
+          <button mat-button color="primary" (click)="addWishMember(row)">
+            Pick
+          </button>
         </td>
       </ng-container>
 
@@ -64,7 +66,12 @@
       [pageSizeOptions]="[5, 10, 25, 100]"
       showFirstLastButtons
     >
-    </mat-paginator>
+    </mat-paginator
+    ><br />
+    <h2>Received team proposals:</h2>
+    <mat-card *ngFor="let proposal of proposalsReceived">{{
+      proposal.teamName
+    }}</mat-card>
   </div>
   <div class="container part2">
     <h2>Pick a name</h2>
@@ -76,8 +83,9 @@
         [formControl]="teamNameControl"
         required
       />
-      <mat-error>Please provide a valid name</mat-error>
-    </mat-form-field>
+      <mat-error>Please provide a valid name</mat-error> </mat-form-field
+    ><br />
+    <h2>Pick a date</h2>
     <mat-form-field appearance="fill">
       <mat-label>Choose a date</mat-label>
       <input
@@ -88,10 +96,15 @@
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-    <button mat-button class="submitter" (click)="submitTeam()">
+    <button
+      mat-flat-button
+      color="primary"
+      class="submitter"
+      (click)="submitTeam()"
+    >
       Submit Now
     </button>
-    <h2>Colleagues:</h2>
+    <h2>Colleagues (preview):</h2>
     <mat-list>
       <mat-list-item *ngFor="let chosen of chosenMembers">
         {{ displayFn(chosen) }}
