--- a/webapp/src/app/student/team/tab-no-team.component.html
+++ b/webapp/src/app/student/team/tab-no-team.component.html
@@ -69,9 +69,54 @@
     </mat-paginator
     ><br />
     <h2>Received team proposals:</h2>
-    <mat-card *ngFor="let proposal of proposalsReceived">{{
-      proposal.teamName
-    }}</mat-card>
+    <table
+      mat-table
+      [dataSource]="dataSourceProposals"
+      class="mat-elevation-z8"
+      matSort
+    >
+      <!-- Student Creator Column -->
+      <ng-container matColumnDef="proposalCreator">
+        <th mat-header-cell *matHeaderCellDef style="width: 20%">
+          Proposal Creator
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.proposalCreator }}
+        </td>
+      </ng-container>
+
+      <!-- Team Name Column -->
+      <ng-container matColumnDef="teamName">
+        <th mat-header-cell *matHeaderCellDef style="width: 15%">Team Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.teamName }}</td>
+      </ng-container>
+
+      <!-- Members and Status Column -->
+      <ng-container matColumnDef="membersAndStatus">
+        <th mat-header-cell *matHeaderCellDef>Members : Proposal Status</th>
+        <td mat-cell *matCellDef="let element" style="white-space: pre-line">
+          {{ displayFnMembers(element.membersAndStatus) }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="deadline">
+        <th mat-header-cell *matHeaderCellDef style="width: 10%">Deadline</th>
+        <td mat-cell *matCellDef="let element">
+          {{ dateString(element.deadline) }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-button color="primary">Accept</button>
+          <button mat-button color="warn">Reject</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="colsToDisplayProposals"></tr>
+      <tr mat-row *matRowDef="let row; columns: colsToDisplayProposals"></tr>
+    </table>
   </div>
   <div class="container part2">
     <h2>Pick a name</h2>
