--- a/webapp/src/app/student/assignments/tab-assignments.container.html
+++ b/webapp/src/app/student/assignments/tab-assignments.container.html
@@ -1,1 +1,1 @@
-<app-tab-student-assignments [assignments]="assignments" [student]="student"></app-tab-student-assignments>
+<app-tab-student-assignments [assignments]="assignments"></app-tab-student-assignments>
