--- a/webapp/src/app/student/assignments/tab-assignments.component.html
+++ b/webapp/src/app/student/assignments/tab-assignments.component.html
@@ -5,19 +5,66 @@
     <!-- Assignments -->
     <table mat-table [dataSource]="regularDataSource" class="mat-elevation-z8" multiTemplateDataRows>
 
-        <ng-container matColumnDef="{{column}}" *ngFor="let column of colsToDisplay">
-            <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-            <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="releaseDate">
+            <th mat-header-cell *matHeaderCellDef>Release Date</th>
+            <td mat-cell *matCellDef="let element">{{dateString(element.releaseDate)}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef>Due Date</th>
+            <td mat-cell *matCellDef="let element">{{dateString(element.dueDate)}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element">{{element.status}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="statusTs">
+            <th mat-header-cell *matHeaderCellDef>Status TS</th>
+            <td mat-cell *matCellDef="let element">{{dateString(element.statusTs)}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="grade">
+            <th mat-header-cell *matHeaderCellDef>Grade</th>
+            <td mat-cell *matCellDef="let element">{{element.grade}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="document">
+            <th mat-header-cell *matHeaderCellDef>Document</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button
+                        color="primary"
+                        (click)="viewAssignment(element)">
+                    View
+                </button>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="uploads">
+            <th mat-header-cell *matHeaderCellDef>Uploads</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button
+                        (click)="showUploads(element)">
+                    <span *ngIf="expandedElement === element; else expandLess" class="material-icons">expand_less</span>
+                    <ng-template #expandLess>
+                        <span class="material-icons">expand_more</span>
+                    </ng-template>
+                </button>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="expandedDetail">
-            <td mat-cell *matCellDef="let element" [attr.colspan]="4">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="colsToDisplay.length">
                 <div class="example-element-detail"
-                     [@detailExpand]="element == regularExpandedElement ? 'expanded' : 'collapsed'">
-                <app-tab-expandend-assignment [element]="regularExpandedElement"
-                                              [solution]="regularAssignmentSolution"
-                                              [uploads]="regularAssignmentUploads"
-                                              [student]="currentStudent.id"
+                     [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                <app-tab-expandend-assignment [element]="expandedElement"
+                                              [uploads]="assignmentUploads"
                 ></app-tab-expandend-assignment>
                 </div>
             </td>
@@ -26,29 +73,74 @@
         <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
         <tr mat-row *matRowDef="let element; columns: colsToDisplay;"
             class="example-element-row"
-            [class.example-expanded-row]="regularExpandedElement === element"
-            (click)='onClickElement(element, "regular")'>
+            [class.example-expanded-row]="expandedElement === element">
         </tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
 
     <h2 style="margin-top: 20px">Expired Assignments</h2>
-    <p>Here you can visualize old courses assignment. You can't upload anymore a new solution!</p>
     <table mat-table [dataSource]="expiredDataSource" class="mat-elevation-z8" multiTemplateDataRows>
 
-        <ng-container matColumnDef="{{column}}" *ngFor="let column of colsToDisplay">
-            <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-            <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="releaseDate">
+            <th mat-header-cell *matHeaderCellDef>Release Date</th>
+            <td mat-cell *matCellDef="let element">{{dateString(element.releaseDate)}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef>Due Date</th>
+            <td mat-cell *matCellDef="let element">{{dateString(element.dueDate)}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element">{{element.status}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="statusTs">
+            <th mat-header-cell *matHeaderCellDef>Status TS</th>
+            <td mat-cell *matCellDef="let element">{{dateString(element.statusTs)}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="grade">
+            <th mat-header-cell *matHeaderCellDef>Grade</th>
+            <td mat-cell *matCellDef="let element">{{element.grade}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="document">
+            <th mat-header-cell *matHeaderCellDef>Document</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button
+                        color="primary"
+                        (click)="viewAssignment(element)">
+                    View
+                </button>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="uploads">
+            <th mat-header-cell *matHeaderCellDef>Uploads</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button
+                        (click)="showUploads(element)">
+                    <span *ngIf="expandedElement === element; else expandLess" class="material-icons">expand_less</span>
+                    <ng-template #expandLess>
+                        <span class="material-icons">expand_more</span>
+                    </ng-template>
+                </button>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let element" [attr.colspan]="colsToDisplay.length">
                 <div class="example-element-detail"
-                     [@detailExpand]="element == expiredExpandedElement ? 'expanded' : 'collapsed'">
-                    <app-tab-expandend-assignment [element]="expiredExpandedElement"
-                                                  [solution]="expiredAssignmentSolution"
-                                                  [uploads]="expiredAssignmentUploads"
-                                                  [student]="currentStudent.id"
+                     [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                    <app-tab-expandend-assignment [element]="expandedElement"
+                                                  [uploads]="assignmentUploads"
                     ></app-tab-expandend-assignment>
                 </div>
             </td>
@@ -57,8 +149,7 @@
         <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
         <tr mat-row *matRowDef="let element; columns: colsToDisplay;"
             class="example-element-row"
-            [class.example-expanded-row]="expiredExpandedElement === element"
-            (click)='onClickElement(element, "expired")'>
+            [class.example-expanded-row]="expandedElement === element">
         </tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
