--- a/webapp/src/app/student/assignments/tab-expandend-assignment.component.html
+++ b/webapp/src/app/student/assignments/tab-expandend-assignment.component.html
@@ -1,24 +1,26 @@
-<div *ngIf="expandedElement && assignmentSolution" class="example-element-description">
-    <div style="flex-direction: row">
-        <div>
-            <p>Assignment: {{expandedElement.name}}</p>
-            <p>Current grade: {{assignmentSolution.grade}}</p>
-        </div>
-        <div>
-            <button mat-raised-button color="primary" style="margin-bottom: 10px" [disabled]="!canUpload" (click)="newAssignmentSolution()">Upload a new solution</button>
-        </div>
-    </div>
-
-
+<div *ngIf="expandedElement" class="example-element-description">
     <div *ngIf="dataSource.data !== undefined && dataSource.data.length !== 0; then table else noTable"></div>
     <ng-template #table>
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
-
-            <ng-container matColumnDef="{{column}}" *ngFor="let column of colsToDisplay">
-                <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-                <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        <table mat-table [dataSource]="dataSource"
+               class="mat-elevation-z8"
+               style="width: 100%"
+               matSort>
+            <ng-container matColumnDef="timestamp">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Timestamp</th>
+                <td mat-cell *matCellDef="let element"> {{dateString(element.timestamp)}} </td>
             </ng-container>
-
+            <ng-container matColumnDef="comment">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Comment</th>
+                <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
+            </ng-container>
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+            </ng-container>
+            <ng-container matColumnDef="download">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Download</th>
+                <td mat-cell *matCellDef="let element"><button mat-button *ngIf="element.imagePath">Download Document</button></td>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
             <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
         </table>
@@ -27,5 +29,15 @@
     <ng-template #noTable>
         <p>No solutions uploaded yet!</p>
     </ng-template>
+
+    <div style="flex-direction: row">
+        <div style="text-align: center">
+            <button mat-raised-button
+                    *ngIf="canUpload"
+                    color="primary"
+                    style="margin: 20px"
+                    (click)="newAssignmentSolution()">Upload a new solution</button>
+        </div>
+    </div>
 
 </div>
