Proposals management finished

--- a/webapp/src/app/student/team/tab-team.container.html
+++ b/webapp/src/app/student/team/tab-team.container.html
@@ -6,5 +6,8 @@
     [proposals]="proposals"
     (submitTeamEvent)="submitTeam($event)"
     (searchStudentsEvent)="searchStudents($event)"
+    (proposalAcceptedEvent)="proposalAccepted($event)"
+    (proposalRejectedEvent)="proposalRejected($event)"
+    (proposalDeletedEvent)="proposalDeleted($event)"
   ></app-tab-no-team>
 </ng-template>
