--- a/webapp/src/app/student/team/tab-no-team.component.html
+++ b/webapp/src/app/student/team/tab-no-team.component.html
@@ -2,7 +2,7 @@
   <!-- Add student input field with autocomplete -->
   <div class="container part1">
     <h2>Pick colleagues to forge your team</h2>
-    <mat-form-field>
+    <mat-form-field style="width: 40%">
       <mat-label>Add Student</mat-label>
       <input
         matInput
@@ -75,6 +75,21 @@
       class="mat-elevation-z8"
       matSort
     >
+      <!-- delete Column description-->
+      <ng-container matColumnDef="cancel">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            mat-icon-button
+            color="warn"
+            (click)="deleteProposal(row.token)"
+            [disabled]="!disabled(row.membersAndStatus)"
+          >
+            <mat-icon>close</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
       <!-- Student Creator Column -->
       <ng-container matColumnDef="proposalCreator">
         <th mat-header-cell *matHeaderCellDef style="width: 20%">
@@ -100,17 +115,51 @@
       </ng-container>
 
       <ng-container matColumnDef="deadline">
-        <th mat-header-cell *matHeaderCellDef style="width: 10%">Deadline</th>
+        <th mat-header-cell *matHeaderCellDef style="width: 17%">Deadline</th>
         <td mat-cell *matCellDef="let element">
           {{ dateString(element.deadline) }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef style="width: 10%"></th>
         <td mat-cell *matCellDef="let row">
-          <button mat-button color="primary">Accept</button>
-          <button mat-button color="warn">Reject</button>
+          <button
+            *ngIf="
+              !accepted(row.membersAndStatus) && !disabled(row.membersAndStatus)
+            "
+            mat-button
+            color="primary"
+            (click)="acceptProposal(row.token)"
+          >
+            Accept
+          </button>
+          <button
+            *ngIf="accepted(row.membersAndStatus)"
+            mat-button
+            style="color: darkgreen"
+            disabled
+          >
+            Accepted
+          </button>
+          <button
+            *ngIf="
+              !accepted(row.membersAndStatus) && !disabled(row.membersAndStatus)
+            "
+            mat-button
+            color="warn"
+            (click)="rejectProposal(row.token)"
+          >
+            Reject
+          </button>
+          <button
+            *ngIf="disabled(row.membersAndStatus)"
+            mat-button
+            color="warn"
+            disabled
+          >
+            Disabled
+          </button>
         </td>
       </ng-container>
 
@@ -120,7 +169,7 @@
   </div>
   <div class="container part2">
     <h2>Pick a name</h2>
-    <mat-form-field class="full-width-input">
+    <mat-form-field class="form-field-name">
       <input
         matInput
         type="text"
@@ -131,7 +180,7 @@
       <mat-error>Please provide a valid name</mat-error> </mat-form-field
     ><br />
     <h2>Pick a date</h2>
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="form-field-name">
       <mat-label>Choose a date</mat-label>
       <input
         matInput
