--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -25,10 +25,7 @@
                         </ul>
                     </mat-card-content>
                     <mat-card-actions align="end">
-                        <button mat-raised-button *ngIf="vm.active" color="primary" (click)="connectToVm(vm)">CONNECT</button>
-                        <button mat-icon-button (click)="openDialogVmOption(vm.id, i)">
-                            <mat-icon>more_vert</mat-icon>
-                        </button>
+                        <button mat-raised-button [disabled]="!vm.active" color="primary" (click)="connectToVm(vm)">CONNECT</button>
                     </mat-card-actions>
                 </mat-card>
             </div>
