--- a/webapp/src/app/student/vms/tab-vms.component.css
+++ b/webapp/src/app/student/vms/tab-vms.component.css
@@ -1,7 +1,7 @@
 .active {
-    background: lightgreen;
+    border: solid greenyellow;
 }
 
 .inactive {
-    background: indianred;
+    border: solid #ff4d51;
 }
