improve assignment handling. Missing doc dl
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/modals/new-assignment-upload/new-assignment-upload-dialog.component.html
+++ b/webapp/src/app/modals/new-assignment-upload/new-assignment-upload-dialog.component.html
@@ -22,6 +22,8 @@
             </ngx-mat-file-input>
             <mat-icon matSuffix>folder</mat-icon>
         </mat-form-field>
+
+        <mat-checkbox *ngIf="isProfessor()" formControlName="reuploadable">Allow Re-Upload</mat-checkbox>
     </form>
 </div>
 <div mat-dialog-actions style="justify-content: center">
