--- a/webapp/src/app/modals/uploads/uploads-dialog.component.html
+++ b/webapp/src/app/modals/uploads/uploads-dialog.component.html
@@ -1,23 +1,30 @@
-<table mat-table [dataSource]="dataSource"
-       class="mat-elevation-z8"
-       style="width: 100%"
-       matSort>
-    <ng-container matColumnDef="timestamp">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Timestamp</th>
-        <td mat-cell *matCellDef="let element"> {{dateString(element.timestamp)}} </td>
-    </ng-container>
-    <ng-container matColumnDef="comment">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Comment</th>
-        <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
-    </ng-container>
-    <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-    </ng-container>
-    <ng-container matColumnDef="download">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Download</th>
-        <td mat-cell *matCellDef="let element"><button mat-button *ngIf="element.imagePath">Download Document</button></td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
-    <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
-</table>
+<h1 mat-dialog-title>Uploads History</h1>
+<div mat-dialog-content>
+    <table mat-table [dataSource]="dataSource"
+           class="mat-elevation-z8"
+           style="width: 100%"
+           matSort>
+        <ng-container matColumnDef="timestamp">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Timestamp</th>
+            <td mat-cell *matCellDef="let element"> {{dateString(element.timestamp)}} </td>
+        </ng-container>
+        <ng-container matColumnDef="comment">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Comment</th>
+            <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        </ng-container>
+        <ng-container matColumnDef="download">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Download</th>
+            <td mat-cell *matCellDef="let element"><button mat-button *ngIf="element.imagePath">Download Document</button></td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
+        <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
+    </table>
+</div>
+<div mat-dialog-actions style="justify-content: center">
+    <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
+    <button mat-button *ngIf="uploadable()" color="primary" (click)="uploadReview()">Upload Review</button>
+</div>
