--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -92,7 +92,14 @@
                         </ng-container>
                         <ng-container matColumnDef="grade">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header>Grade</th>
-                            <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
+                            <td mat-cell *matCellDef="let element">
+                                <button mat-button
+                                        *ngIf="gradeAssignable(element)"
+                                        (click)="assignGrade(element)">
+                                <mat-icon>add_circle_outline</mat-icon>
+                                </button>
+                                {{element.grade}}
+                            </td>
                         </ng-container>
                         <ng-container matColumnDef="uploads">
                             <th mat-header-cell *matHeaderCellDef>Uploads</th>
